
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity" >

        <TextView
            android:id="@+id/tvtagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tagline"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvversion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/versionnumber"
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <TextView
            android:id="@+id/txteplanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Explanation"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/txtcopyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/Textkankoukyoukainote2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/kankyoukyoukainote"
            android:textAppearance="?android:attr/textAppearanceSmall" />
            
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="283dp"
            android:layout_height="wrap_content"
            android:src="@drawable/yakushimalife" 
            android:contentDescription="@string/yakushimalifelogo"/>

        <Button
            android:id="@+id/buttonyakushimalife"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yakushimalife" />

    </LinearLayout>
</ScrollView>
