
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools">
    
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvtagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tagline"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/From"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/From"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
            android:id="@+id/startpointspinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/To"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/To"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
            android:id="@+id/endpointspinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnChangeTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                android:text="@string/change_time_button"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnGo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                android:text="@string/go_button"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnListAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                android:text="@string/listall_button"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvBus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tvtip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/txteplanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Explanation"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TextView
            android:id="@+id/txtcopyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>
</ScrollView>
